# KnockVPN

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: nativelib.cpp
app/src/main/java/com/nt202/knockvpn/: KnockingPortsFragment.java  MainActivity.java  PortKnocker.java  PortSequence.java  PortWithProtocol.java  Protocol.java  RawFileReader.java  SocksVpnService.java  VpnActivity.java  VpnFragment.java
app/src/main/java/com/nt202/knockvpn/knocking/: KnockingPortsFragment.java  PortKnocker.java  PortSequence.java  PortWithProtocol.java  Protocol.java
app/src/main/java/com/nt202/knockvpn/vpn/: RawFileReader.java  SocksVpnService.java  VpnFragment.java
app/src/main/java/hev/htproxy/: TProxyService.java
app/src/main/res/animator/: pulse_animation.xml
app/src/main/res/drawable/: knocking.xml  nothing.xml  thumbsup.xml  vpn_button_background.xml
app/src/main/res/layout/: activity_main.xml  activity_vpn.xml  dialog_add.xml  dialog_ssh_setup.xml  fragment_knocking_ports.xml  fragment_vpn.xml  list_item.xml  port_row.xml
app/src/main/res/raw/: config.yaml
app/src/main/res/values/: arrays.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
knockvpnrust/: Cargo.toml  README.md  sshd_config_test
knockvpnrust/src/: lib.rs  main.rs  main_socks.rs  main_tun2socks.rs  ssh_socks.rs  tun2socks_config.yaml
