[package]
name = "knockvpnrust"
version = "0.1.0"
edition = "2021"

[lib]
name = "knockvpnrust"
crate-type = ["cdylib"]

[dependencies]
jni = { version = "0.21.1", default-features = false }
android_logger = "0.15.0"
tokio = { version = "1.0", features = ["full"] }
russh = "0.52.1"
anyhow = "1.0.98"
async-trait = "0.1.88"
log = "0.4.27"
env_logger = "0.11.8"
futures = "0.3.31"
bytes = "1.10.1"